# serialize_hpp

./: .gitignore  README.md  TODO.md  meson.build
print/: debug.hpp  log.hpp  print.hpp
serialize_hpp/: aggregate_arity.hpp  concept.hpp  debug.hpp  log.hpp  print.hpp  serialize.hpp
single_hpp/: compiler_explorer.cpp  single_serialize.hpp
tests/: meson.build  test_aggregate.cpp  test_aggregate_arity.cpp  test_debug.cpp  test_fundamental.cpp  test_print.cpp  test_serialize.cpp
